# Buzz-Electron

./: LICENSE  README.md  SECURITY.md  pyproject.toml  renamer_backend_full.spec
.github/: FUNDING.yml
buzz/transcriber/: renamer_server.py  whisper_cpp.py
renamer-ui/electron/: main.js  preload.js
renamer-ui/renderer/: index.html  renderer.js  style.css  transcribe.js
renamer-ui/scripts/: pip_audit.json  pip_audit_after.json
